# Pylearn

./: pyproject.toml
examples/: test.py
pylearn/: base.py  gradient_descent.py  linear.py  metrics.py  score.py
