[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylearn"
version = "0.1.0"
description = "A simple machine learning library"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.setuptools]
packages = ["pylearn"]
